--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .App {
-  text-align: center;
+  text-align: start;
 }
 
 .App-logo {
@@ -11,6 +11,48 @@
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
+}
+
+.modal
+{
+  margin : 20px 10px 20px 10px;
+  padding : 10px;
+  background: #0d130e;
+  text-align : left;
+  color : #eee;
+}
+
+.list{
+  
+  margin-top : 30px;
+  text-align : left;
+  padding-left : 20px;
+  padding-right : 20px;
+}
+
+body{
+  font-family : 'nanumsquare';
+
+}
+
+.black-nav{
+  background: black;
+  width : 100%;
+  display : flex;
+  color : white;
+  padding : 20px;
+  font-weight: 600;
+
+}
+
+.flex-center{
+  display: flex;
+  justify-content: center;
+
+}
+button:hover{
+  color : white;
+  background-color: black;
 }
 
 .App-header {
@@ -28,6 +70,23 @@
   color: #61dafb;
 }
 
+div#right{
+
+  background :chartreuse;
+  color:black;
+  display : flex;
+  flex-direction : row;
+  flex-wrap : wrap;
+  justify-content: flex-start;
+  
+  margin: 10px;
+  padding: 5px;
+  align-items : baseline;
+
+  border : 2px solid black;
+  border-radius: 10px;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
@@ -35,4 +94,9 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.nav-link{
+  color : white;
+  border : 2px solid black;
 }
